# Smarinth

./: .gitignore  Cargo.toml
configs/: default.json  default.toml
src/: app.rs  main.rs
src/configs/: Database.rs  database.rs  mod.rs  password.rs  schema.rs  settings.rs
src/entities/: mod.rs  user.rs
src/errors/: api_error.rs  auth_error.rs  config_error.rs  control_error.rs  database_error.rs  db_error.rs  mod.rs  token_error.rs  user_error.rs
src/handlers/: auth_handler.rs  mod.rs  register_handler.rs
src/middlewares/: auth.rs  auth_middleware.rs  mod.rs
src/payload/: mod.rs  token_dto.rs  user_dao.rs  user_dto.rs
src/repository/: user_repository.rs
src/services/: auth_service.rs  control_service.rs  mod.rs  token_service.rs  user_service.rs
src/states/: auth_state.rs  mod.rs  user_state.rs
