[package]
name = "smarinth"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
argon2 = "0.5"
ntex = { version = "1", features = ["tokio"] }
ntex-cors = "1"
ntex-mqtt = "1"
config = "0.14"
jsonwebtoken = "9.2"
password-hash = { version = "0.5", features = ["getrandom"] }
serde = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
sqlx-cli = "0.7"