[package]
name = "smarinth"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
ntex = { version = "2", features = ["tokio"] }
ntex-cors = "2"
ntex-mqtt = "4"
jsonwebtoken = "9.3"
password-hash = { version = "0.5", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "all-databases"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
sqlx-cli = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3